--- a/HomeworkTwo/res/layout/view_fragment.xml
+++ b/HomeworkTwo/res/layout/view_fragment.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
+    <WebView
         android:id="@+id/viewImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:contentDescription="@string/content"
         android:src="@drawable/ic_launcher"/>
