--- a/HomeworkTwo/res/layout/index_fragment.xml
+++ b/HomeworkTwo/res/layout/index_fragment.xml
@@ -9,12 +9,12 @@
         android:id="@id/android:list"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="9" />
+        android:layout_weight="19" />
     
     <LinearLayout 
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/black" />
+        android:background="@drawable/swipe" />
     
 </LinearLayout>
