--- a/HomeworkTwo/res/layout/view_fragment.xml
+++ b/HomeworkTwo/res/layout/view_fragment.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
+    <LinearLayout
+        android:layout_width="15dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/swipe" />
+        
+    
     <WebView
         android:id="@+id/viewImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
         android:contentDescription="@string/content"
         android:src="@drawable/ic_launcher"/>
 
-</RelativeLayout>
+</LinearLayout>
