--- a/PhotoViewer/res/layout-land/fragment_view_finder.xml
+++ b/PhotoViewer/res/layout-land/fragment_view_finder.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-    <TextView
-        android:text="@string/view_finder_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-    
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        tools:ignore="UselessParent" >
+
+        <SurfaceView
+            android:id="@+id/view_finder_surfaceView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/view_finder_snapPicButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/snap" />
+        
+    </LinearLayout>
+
+</FrameLayout>
