--- a/PhotoViewer/res/layout-land/activity_main.xml
+++ b/PhotoViewer/res/layout-land/activity_main.xml
@@ -1,11 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<?xml version="1.0" encoding="utf-8"?>
 
-    <fragment android:name="com.example.photoviewer.AlbumFragment"
-        android:id="@+id/albumFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </fragment>
 
-</LinearLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/fragmentContainer"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  />
