--- a/PhotoViewer/res/layout-land/fragment_view_finder.xml
+++ b/PhotoViewer/res/layout-land/fragment_view_finder.xml
@@ -15,13 +15,17 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/view_finder_snapPicButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/snap" />
         
     </LinearLayout>
+    <FrameLayout android:id="@+id/view_finder_progressContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="true">
+    <ProgressBar
+      style="@android:style/Widget.ProgressBar.Large"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"/>
+  </FrameLayout>
 
 </FrameLayout>
